fix links on mobile; format

--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -1,15 +1,15 @@
 .muted {
-    color: var(--sl-color-gray-3);
+	color: var(--sl-color-gray-3);
 }
 
 /* headerless table fix */
 tbody:first-child tr:first-child td {
-    border-top: 1px solid var(--sl-color-gray-5);
+	border-top: 1px solid var(--sl-color-gray-5);
 }
 
 table.full-width {
-    display: table;
-    width: 100%;
+	display: table;
+	width: 100%;
 }
 
 a.right-sidebar-link {
@@ -19,10 +19,16 @@ a.right-sidebar-link {
 	color: var(--sl-color-gray-3);
 	overflow-wrap: anywhere;
 
-    --pad-inline: 0.5rem;
+	--pad-inline: 0.5rem;
 	display: block;
 	border-radius: 0.25rem;
 	padding-block: 0.25rem;
 	padding-inline: var(--pad-inline) var(--pad-inline);
 	line-height: 1.25;
+}
+
+@media (min-width: 72rem) {
+	.only-show-small {
+		display: none;
+	}
 }
